# npt-pose

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDPA.cmake
include/: construct_coeff_constraint.h  construct_coeff_objective.h  create2D2DExperiment.h  essential_matrix.h  npt_pose.h
src/: construct_coeff_constraint.cpp  construct_coeff_objective.cpp  create2D2DExperiment.cpp  essential_matrix.cpp  npt_pose.cpp
test/: demo.cpp
